Reduce verbose or redundant code constructs (#413)
- removes unnecessary code
- simplifies code
- adds missing Javadoc along the road